--- a/package.json
+++ b/package.json
@@ -8,12 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.1",
-    "@mui/icons-material": "^7.3.7",
-    "@mui/material": "^7.3.7",
     "better-auth": "^1.4.18",
     "mongodb": "^7.0.0",
+    "@google/generative-ai": "^0.24.1",
+    "linkedin-jobs-api": "^1.0.7",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
