--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
-    "better-auth": "^1.4.18",
-    "mongodb": "^7.0.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@google/generative-ai": "^0.24.1",
+    "@mui/icons-material": "^7.3.7",
+    "@mui/material": "^7.3.7",
+    "better-auth": "^1.4.18",
+    "ioredis": "^5.9.2",
     "linkedin-jobs-api": "^1.0.7",
+    "mongodb": "^7.0.0",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
