--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "ioredis": "^5.9.2",
     "linkedin-jobs-api": "^1.0.7",
     "mongodb": "^7.0.0",
-    "motion": "^12.29.2",
     "mongoose": "^9.1.5",
+    "motion": "^12.29.2",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "react-intersection-observer": "^10.0.2"
+    "react-intersection-observer": "^10.0.2",
+    "unpdf": "^1.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
